RESOLVED FIXED157826
REGRESSION (r200534) Command-+ no longer zooms pages
https://bugs.webkit.org/show_bug.cgi?id=157826
Summary REGRESSION (r200534) Command-+ no longer zooms pages
Simon Fraser (smfr)
Reported 2016-05-17 18:27:05 PDT
REGRESSION (r200534) Command-+ no longer zooms pages
Attachments
Patch (9.19 KB, patch)
2016-05-17 18:30 PDT, Simon Fraser (smfr)
no flags
Archive of layout-test-results from ews102 for mac-yosemite (1.94 MB, application/zip)
2016-05-17 19:10 PDT, Build Bot
no flags
Archive of layout-test-results from ews114 for mac-yosemite (2.33 MB, application/zip)
2016-05-17 19:21 PDT, Build Bot
no flags
Patch (14.53 KB, patch)
2016-05-17 19:21 PDT, Simon Fraser (smfr)
no flags
Patch (15.97 KB, patch)
2016-05-17 19:42 PDT, Simon Fraser (smfr)
no flags
Archive of layout-test-results from ews126 for ios-simulator-wk2 (659.34 KB, application/zip)
2016-05-17 20:40 PDT, Build Bot
no flags
Archive of layout-test-results from ews115 for mac-yosemite (2.42 MB, application/zip)
2016-05-17 20:42 PDT, Build Bot
no flags
Patch (17.04 KB, patch)
2016-05-17 22:57 PDT, Simon Fraser (smfr)
no flags
Archive of layout-test-results from ews101 for mac-yosemite (906.09 KB, application/zip)
2016-05-17 23:25 PDT, Build Bot
no flags
Patch (19.17 KB, patch)
2016-05-18 11:11 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2016-05-17 18:30:26 PDT
Build Bot
Comment 2 2016-05-17 19:10:34 PDT
Comment on attachment 279194 [details] Patch Attachment 279194 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1339470 New failing tests: fast/text-autosizing/ios/percent-adjust-percent-line-height.html fast/text-autosizing/ios/line-height-text-autosizing.html fast/text-autosizing/ios/percent-adjust-length-line-height.html fast/text-autosizing/ios/percent-adjust-number-line-height.html
Build Bot
Comment 3 2016-05-17 19:10:38 PDT
Created attachment 279199 [details] Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 4 2016-05-17 19:21:06 PDT
Comment on attachment 279194 [details] Patch Attachment 279194 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1339566 New failing tests: fast/text/basic/013.html fast/text/basic/006.html storage/indexeddb/pending-activity-workers.html fast/text/basic/008.html fast/text/basic/009.html fast/text/basic/generic-family-changes.html fast/text/basic/012.html fast/text/basic/004.html fast/text-autosizing/ios/percent-adjust-length-line-height.html fast/text/basic/002.html fast/text/basic/001.html fast/text/basic/generic-family-reset.html fast/text-autosizing/ios/line-height-text-autosizing.html fast/text/basic/003.html fast/text/basic/011.html fast/text-autosizing/ios/percent-adjust-percent-line-height.html fast/text/basic/007.html fast/text/basic/005.html fast/text/basic/015.html fast/text/basic/014.html fast/text-autosizing/ios/percent-adjust-number-line-height.html
Build Bot
Comment 5 2016-05-17 19:21:12 PDT
Created attachment 279200 [details] Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Simon Fraser (smfr)
Comment 6 2016-05-17 19:21:14 PDT
WebKit Commit Bot
Comment 7 2016-05-17 19:25:17 PDT
Attachment 279201 [details] did not pass style-queue: ERROR: LayoutTests/platform/mac/TestExpectations:20: Path does not exist. [test/expectations] [5] ERROR: LayoutTests/platform/mac-wk2/TestExpectations:12: Path does not exist. [test/expectations] [5] Total errors found: 2 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 8 2016-05-17 19:42:51 PDT
Build Bot
Comment 9 2016-05-17 20:40:19 PDT
Comment on attachment 279202 [details] Patch Attachment 279202 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1339969 New failing tests: http/tests/performance/performance-resource-timing-cached-entries.html
Build Bot
Comment 10 2016-05-17 20:40:24 PDT
Created attachment 279207 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 11 2016-05-17 20:42:02 PDT
Comment on attachment 279202 [details] Patch Attachment 279202 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1339925 New failing tests: fast/text/basic/013.html fast/text/basic/008.html fast/text/basic/009.html fast/text/basic/011.html fast/text/basic/012.html fast/text/basic/004.html fast/text/basic/generic-family-changes.html fast/text/basic/002.html fast/text/basic/001.html fast/text/basic/generic-family-reset.html fast/text/basic/003.html fast/text/basic/006.html fast/text/basic/007.html fast/text/basic/005.html fast/text/basic/015.html fast/text/basic/014.html
Build Bot
Comment 12 2016-05-17 20:42:06 PDT
Created attachment 279208 [details] Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
Simon Fraser (smfr)
Comment 13 2016-05-17 21:31:26 PDT
I don't understand the fast/text/basic/ failures, and can't reproduce them locally.
Simon Fraser (smfr)
Comment 14 2016-05-17 22:50:00 PDT
The problem here is in DumpRenderTree we have: #if ENABLE(IOS_TEXT_AUTOSIZING) [preferences _setTextAutosizingEnabled:NO]; #endif yet ENABLE_IOS_TEXT_AUTOSIZING is not defined because the xcconfig files for DRT and WTR don't have all the feature defines stuff in them.
Simon Fraser (smfr)
Comment 15 2016-05-17 22:55:06 PDT
Filed bug 157828.
Simon Fraser (smfr)
Comment 16 2016-05-17 22:57:01 PDT
Build Bot
Comment 17 2016-05-17 23:25:19 PDT
Comment on attachment 279214 [details] Patch Attachment 279214 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1340943 New failing tests: fast/text/firstline/003.html
Build Bot
Comment 18 2016-05-17 23:25:24 PDT
Created attachment 279219 [details] Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Simon Fraser (smfr)
Comment 19 2016-05-18 10:52:12 PDT
setPageZoomFactor is carrying over from a test (or its expected) in WK1 because [webView resetPageZoom:nil]; isn't enough to reset internals.setPageZoomFactor.
Simon Fraser (smfr)
Comment 20 2016-05-18 11:11:23 PDT
Simon Fraser (smfr)
Comment 21 2016-05-18 12:05:45 PDT
Ryan Haddad
Comment 22 2016-05-18 17:38:24 PDT
Simon Fraser (smfr)
Comment 23 2016-05-18 17:57:38 PDT
I removed that errant WTFLogAlways in http://trac.webkit.org/changeset/201103
Darin Adler
Comment 24 2016-05-22 10:09:06 PDT
Comment on attachment 279263 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=279263&action=review > Tools/ChangeLog:10 > + * DumpRenderTree/mac/DumpRenderTree.mm: > + (resetWebPreferencesToConsistentValues): Remove ENABLE() #ifdefs that do nothing (see http://webkit.org/b/157828). You say that these were doing nothing, but actually they were #if'ing out the code! So now the code is compiled, unconditionally. I suppose that’s a good thing. Main problem I would expect is that they would fail to compile if we turned off those features?
Note You need to log in before you can comment on or make changes to this bug.