REGRESSION (r200534) Command-+ no longer zooms pages https://bugs.webkit.org/show_bug.cgi?id=157826 rdar://problem/26334636

Reviewed by Dean Jackson.

Source/WebCore:

When text autosizing was enabled on Mac, we started to parse and respect
-webkit-text-size-adjust. Fix by cutting this off in CSSParser if the feature
is disabled.

Also fix InternalSettings to reset page and text zoom, since WebKit1 aliases
the zoom levels causing DRT to fail to reset them between tests.

Test: fast/text-autosizing/mac/text-size-adjust-text-zoom.html

* css/CSSParser.cpp:
(WebCore::CSSParserContext::CSSParserContext):
(WebCore::isValidKeywordPropertyAndValue):
(WebCore::CSSParser::parseValue):
(WebCore::CSSParser::isTextAutosizingEnabled):
* css/CSSParser.h:
* css/CSSParserMode.h:
* testing/InternalSettings.cpp:
(WebCore::InternalSettings::resetToConsistentState):

Tools:

* DumpRenderTree/mac/DumpRenderTree.mm:
(resetWebPreferencesToConsistentValues): Remove ENABLE() #ifdefs that do nothing (see http://webkit.org/b/157828).

LayoutTests:

Need to call internals.settings.setTextAutosizingEnabled(true) earlier in some tests.

* fast/text-autosizing/ios/line-height-text-autosizing.html:
* fast/text-autosizing/ios/percent-adjust-length-line-height.html:
* fast/text-autosizing/ios/percent-adjust-number-line-height.html:
* fast/text-autosizing/ios/percent-adjust-percent-line-height.html:
* fast/text-autosizing/mac/text-size-adjust-text-zoom-expected.html: Added.
* fast/text-autosizing/mac/text-size-adjust-text-zoom.html: Added.
* platform/mac-wk2/TestExpectations:
* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/175970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201090 268f45cc-cd09-0410-ab3c-d52691b4dbfc